--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -36,3 +36,5 @@ security:
     access_control:
         - { path: ^/admin, roles: ROLE_ADMIN }
         - { path: ^/profile, roles: ROLE_USER }
+        - { path: ^/intervention, roles: [ROLE_ADMIN, ROLE_GESTION] }
+        - { path: ^/contrat_pret, roles: [ROLE_ADMIN, ROLE_GESTION] }
