--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -38,4 +38,4 @@ security:
         - { path: ^/profile, roles: ROLE_USER }
         - { path: ^/intervention, roles: [ROLE_ADMIN, ROLE_GESTION] }
         - { path: ^/contrat_pret, roles: [ROLE_ADMIN, ROLE_GESTION] }
-        - { path: ^/compte, roles: [ROLE_ADMIN] }
+        - { path: ^/compte, roles: [ROLE_ADMIN, ROLE_ADHERENT, ROLE_GESTION] }
