--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -39,3 +39,4 @@ security:
         - { path: ^/intervention, roles: [ROLE_ADMIN, ROLE_GESTION] }
         - { path: ^/contrat_pret, roles: [ROLE_ADMIN, ROLE_GESTION] }
         - { path: ^/compte, roles: [ROLE_ADMIN, ROLE_ADHERENT, ROLE_GESTION] }
+        - { path: ^/user, roles: [ROLE_ADMIN] }
