Ajout d'une page d'erreur si l'utilisateur n'a pas le droit d'accès à cette page

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -18,10 +18,13 @@ security:
             lazy: true
             provider: app_user_provider
 
+            access_denied_handler: App\Security\AccessDeniedHandler
+
             form_login:
                 login_path: app_login
                 check_path: app_login
                 default_target_path: app_accueil   # Redirection après connexion
+                
 
                 username_parameter: email
                 password_parameter: password
