--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -39,7 +39,9 @@ security:
     access_control:
         - { path: ^/admin, roles: ROLE_ADMIN }
         - { path: ^/profile, roles: ROLE_USER }
+        - { path: ^/inscriptions, roles: [ROLE_ADMIN, ROLE_GESTION] }
         - { path: ^/intervention, roles: [ROLE_ADMIN, ROLE_GESTION] }
         - { path: ^/contrat_pret, roles: [ROLE_ADMIN, ROLE_GESTION] }
         - { path: ^/compte, roles: [ROLE_ADMIN, ROLE_ADHERENT, ROLE_GESTION] }
         - { path: ^/user, roles: [ROLE_ADMIN] }
+        - { path: ^/professionnel, roles: [ROLE_ADMIN, ROLE_GESTION] }
